--- a/exercise.html
+++ b/exercise.html
@@ -2,8 +2,9 @@
 <html lang="ja">
   <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style2.css">
-  <title>9章演習</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>10章演習</title>
   </head>
 
   <body>
